--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<jetty.version>6.1.4</jetty.version>
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<slf4j.version>1.5.10</slf4j.version>
-		<java.version>1.5</java.version>
+		<java.version>1.6</java.version>
 		<junit.version>4.8.2</junit.version>
 		<webapp.dir>${basedir}/src/main/webapp</webapp.dir>
 	</properties>
@@ -280,14 +280,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
-        <!--
-        <dependency>
-			<groupId>net.sf.jasperreports</groupId>
-			<artifactId>jasperreports</artifactId>
-			<version>3.7.1</version>
-		</dependency>
-		 -->
 		
 		 <dependency>
 	      <groupId>commons-collections</groupId>
@@ -317,8 +309,7 @@
 		<version>3.3.1</version>
 	</dependency>
             
-            
-	    
+        
 	</dependencies>
 
 	<repositories>
@@ -392,14 +383,11 @@
 			</plugin>
 
 			<!-- Tomcat plugin for embedded tomcat -->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>tomcat-maven-plugin</artifactId>
-				<version>1.1</version>
-				<configuration>
-					<path>/${project.build.finalName}</path>
-				</configuration>
-			</plugin>
+	        <plugin>
+	          <groupId>org.apache.tomcat.maven</groupId>
+	          <artifactId>tomcat7-maven-plugin</artifactId>
+	          <version>2.2</version>
+	        </plugin>
 
 		</plugins>
 	</build>
